# ecc

./: Makefile.am  Makefile.in  README  configure  configure.ac
chef/: Makefile.am  Makefile.in  chef-lexer.c  chef-lexer.l  chef-parser.c  chef-parser.h  chef-parser.y  chef.c  chef.h  gen.c
doc/: Makefile.am  Makefile.in  chef.1
libecc/: Makefile.am  Makefile.in  errors.c  errors.h  strutils.c  strutils.h  xalloca.c  xalloca.h
tests/: Makefile.am  Makefile.in  strlists.c
